Sat Dec 29 12:54:45 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * examples/IPC_SAP/SOCK_SAP/C-inclient.cpp:
        * examples/IPC_SAP/SOCK_SAP/C-inserver.cpp:
        * examples/Mem_Map/file-reverse/file-reverse.cpp:
        * examples/Reactor/Multicast/Log_Wrapper.cpp:
        * examples/Reactor/Multicast/server.cpp:
          Made these files compiling when ACE_USES_WCHAR is set

Sat Dec 29 10:42:12 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * tests/SSL/Makefile.bor:
          Added SSL_LIB to lib files

Sat Dec 29 02:55:24 2001  Venkita Subramonian  <venkita@cs.wustl.edu>

	* ace/OS.i:
	  Fixed problem with idl compiler segmentation fault.
	  replaced
	  # if !defined ACE_LACKS_ENV
	  with
	  # if defined ACE_LACKS_ENV
	  in ACE_OS::strenvdup.

Fri Dec 28 16:01:58 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/Global_Macros.h: Fixed a fuzz error.

Fri Dec 28 15:15:42 2002  Steve Huston  <shuston@riverace.com>

        * ace/Select_Reactor_T.h: Improved Doxygenization of some comments.

Fri Dec 28 13:41:23 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/OS.{h,i,cpp} (putenv,getenv,strenvdup,getenvstrings):
	* ace/Get_Opt.cpp (ACE_Get_Opt): Removed the #ifndef (ACE_LACKS_ENV)
	  from Get_Opt.cpp and move this into OS.i where it belongs!
  	  Thanks to Venkita and Don Hinton for reporting this.

Fri Dec 28 19:56:12 2001  Johnny Willemsen <jwillemsen@remedy.nl>

        * performance-tests/Misc/test_naming.cpp:
        * performance-tests/Server_Concurrency/Latency_Stats.h:
        * performance-tests/Server_Concurrency/Leader_Follower/leader_follower.cpp:
        * performance-tests/Server_Concurrency/Queue_Based_Workers/workers.cpp:
        * performance-tests/TCP/tcp_test.cpp:
        * performance-tests/UDP/udp_test.cpp:
          Made these files compiling when ACE_USES_WCHAR is set

        * Makefile.bor:
          Added the performance-tests directory to this BCB makefile. All files